# FreeTube

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.html
pages/app/: errorPage.html  instaPage.html  instaPhotoPage.html  results.html  searchPage.html  twitchPage.html  twitterPage.html  verify.html  videoPage.html
pages/discrete/: resultsPage.html  searchPage.html  videoPage.html
uyts/: __init__.py  search.py
