[tool]
[tool.poetry]
authors = ["William Henderson <william-henderson@outlook.com>"]
name = "FreeTube"
description = "YouTube proxy"
version = "0.0.0"
[tool.poetry.dependencies]
bs4 = "*"
flask = "*"
pafy = "*"
python = "^3.8"
requests = "*"
youtube-dl = "*"
unlimited-youtube-search = "0.0.4"
flask_cors = "*"